// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`field-slider Renders \`field-slider\` with custom props 1`] = `
<widget-settings-item-stub
  eager="true"
  title="Custom title"
>
  <div
    class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input__slider"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-slider v-slider--horizontal theme--light"
        >
          <input
            always-dirty=""
            disabled="disabled"
            readonly="readonly"
            tabindex="-1"
            value="22"
          />
          <div
            class="v-slider__track-container"
          >
            <div
              class="v-slider__track-background primary lighten-3"
              style="right: 0px; width: calc(60%);"
            />
            <div
              class="v-slider__track-fill primary"
              style="left: 0px; width: 40%;"
            />
          </div>
          <div
            class="v-slider__ticks-container v-slider__ticks-container--always-show"
          >
            <span
              class="v-slider__tick v-slider__tick--filled"
              style="width: 2px; height: 2px; left: calc(0% - 1px); top: calc(50% - 1px);"
            />
            <span
              class="v-slider__tick v-slider__tick--filled"
              style="width: 2px; height: 2px; left: calc(20% - 1px); top: calc(50% - 1px);"
            />
            <span
              class="v-slider__tick"
              style="width: 2px; height: 2px; left: calc(40% - 1px); top: calc(50% - 1px);"
            />
            <span
              class="v-slider__tick"
              style="width: 2px; height: 2px; left: calc(60% - 1px); top: calc(50% - 1px);"
            />
            <span
              class="v-slider__tick"
              style="width: 2px; height: 2px; left: calc(80% - 1px); top: calc(50% - 1px);"
            />
            <span
              class="v-slider__tick"
              style="width: 2px; height: 2px; left: calc(100% - 1px); top: calc(50% - 1px);"
            />
          </div>
          <div
            aria-orientation="horizontal"
            aria-readonly="false"
            aria-valuemax="25"
            aria-valuemin="20"
            aria-valuenow="22"
            class="v-slider__thumb-container v-slider__thumb-container--show-label primary--text"
            role="slider"
            style="left: 40%;"
            tabindex="0"
          >
            <div
              class="v-slider__thumb primary"
            />
            <transition-stub
              name="scale-transition"
            >
              <div
                class="v-slider__thumb-label-container"
                style="display: none;"
              >
                <div
                  class="v-slider__thumb-label primary"
                  style="height: 32px; width: 32px; transform: translateY(-20%) translateY(-12px) translateX(-50%) rotate(45deg);"
                >
                  <div>
                    <span>
                      22
                    </span>
                  </div>
                </div>
              </div>
            </transition-stub>
          </div>
        </div>
      </div>
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</widget-settings-item-stub>
`;

exports[`field-slider Renders \`field-slider\` with default props 1`] = `
<widget-settings-item-stub
  eager="true"
  title="Custom required title"
>
  <div
    class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input__slider"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-slider v-slider--horizontal theme--light"
        >
          <input
            always-dirty=""
            disabled="disabled"
            readonly="readonly"
            tabindex="-1"
            value="3"
          />
          <div
            class="v-slider__track-container"
          >
            <div
              class="v-slider__track-background primary lighten-3"
              style="right: 0px; width: calc(40%);"
            />
            <div
              class="v-slider__track-fill primary"
              style="left: 0px; width: 60%;"
            />
          </div>
          <div
            class="v-slider__ticks-container v-slider__ticks-container--always-show"
          >
            <span
              class="v-slider__tick v-slider__tick--filled"
              style="width: 2px; height: 2px; left: calc(0% - 1px); top: calc(50% - 1px);"
            />
            <span
              class="v-slider__tick v-slider__tick--filled"
              style="width: 2px; height: 2px; left: calc(20% - 1px); top: calc(50% - 1px);"
            />
            <span
              class="v-slider__tick v-slider__tick--filled"
              style="width: 2px; height: 2px; left: calc(40% - 1px); top: calc(50% - 1px);"
            />
            <span
              class="v-slider__tick"
              style="width: 2px; height: 2px; left: calc(60% - 1px); top: calc(50% - 1px);"
            />
            <span
              class="v-slider__tick"
              style="width: 2px; height: 2px; left: calc(80% - 1px); top: calc(50% - 1px);"
            />
            <span
              class="v-slider__tick"
              style="width: 2px; height: 2px; left: calc(100% - 1px); top: calc(50% - 1px);"
            />
          </div>
          <div
            aria-orientation="horizontal"
            aria-readonly="false"
            aria-valuemax="5"
            aria-valuemin="0"
            aria-valuenow="3"
            class="v-slider__thumb-container v-slider__thumb-container--show-label primary--text"
            role="slider"
            style="left: 60%;"
            tabindex="0"
          >
            <div
              class="v-slider__thumb primary"
            />
            <transition-stub
              name="scale-transition"
            >
              <div
                class="v-slider__thumb-label-container"
                style="display: none;"
              >
                <div
                  class="v-slider__thumb-label primary"
                  style="height: 32px; width: 32px; transform: translateY(-20%) translateY(-12px) translateX(-50%) rotate(45deg);"
                >
                  <div>
                    <span>
                      3
                    </span>
                  </div>
                </div>
              </div>
            </transition-stub>
          </div>
        </div>
      </div>
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</widget-settings-item-stub>
`;
